--- a/fBReader/src/main/AndroidManifest.xml
+++ b/fBReader/src/main/AndroidManifest.xml
@@ -5,10 +5,6 @@
     android:versionCode="2051010"
     android:versionName="2.5.10">
 
-    <uses-sdk
-        android:maxSdkVersion="10"
-        android:minSdkVersion="5"
-        android:targetSdkVersion="9" />
 
     <supports-screens
         android:anyDensity="true"
@@ -25,7 +21,6 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-        android:name="org.geometerplus.android.fbreader.FBReaderApplication"
         android:icon="@drawable/fbreader"
         android:label="@string/app_name"
         android:logo="@drawable/fbreader_bw">
@@ -35,137 +30,7 @@
             android:icon="@drawable/fbreader"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:theme="@style/FBReader.Activity">
-            <!--  <intent-filter>
-                  <action android:name="android.intent.action.MAIN" />
-
-                  <category android:name="android.intent.category.LAUNCHER" />
-              </intent-filter>-->
-            <intent-filter>
-                <action android:name="android.fbreader.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.fbreader.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data android:scheme="file" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data android:scheme="fbreader-action" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.fbreader.action.PLUGIN" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data
-                    android:host=""
-                    android:scheme="file" />
-                <data android:pathPattern=".*\\.epub" />
-                <data android:pathPattern=".*\\.oeb" />
-                <data android:pathPattern=".*\\.fb2" />
-                <data android:pathPattern=".*\\.fb2\\.zip" />
-                <data android:pathPattern=".*\\.mobi" />
-                <data android:pathPattern=".*\\.prc" />
-                <data android:pathPattern=".*\\.txt" />
-                <data android:pathPattern=".*\\.rtf" />
-                <data android:pathPattern=".*\\.pdf" />
-                <data android:pathPattern=".*\\.djvu" />
-                <data android:pathPattern=".*\\.cbr" />
-                <data android:pathPattern=".*\\.cbz" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data
-                    android:host=""
-                    android:mimeType="text/plain"
-                    android:scheme="file" />
-                <data android:pathPattern=".*\\.epub" />
-                <data android:pathPattern=".*\\.oeb" />
-                <data android:pathPattern=".*\\.fb2" />
-                <data android:pathPattern=".*\\.mobi" />
-                <data android:pathPattern=".*\\.prc" />
-                <data android:pathPattern=".*\\.txt" />
-                <data android:pathPattern=".*\\.rtf" />
-                <data android:pathPattern=".*\\.pdf" />
-                <data android:pathPattern=".*\\.djvu" />
-                <data android:pathPattern=".*\\.cbr" />
-                <data android:pathPattern=".*\\.cbz" />
-            </intent-filter>
-            <!--
-            intent-filter>
-				<action android:name="android.intent.action.VIEW"/>
-				<category android:name="android.intent.category.DEFAULT"/>
-				<category android:name="android.intent.category.BROWSABLE"/>
-				<data android:scheme="content" android:pathPattern=".*\\.fb2"/>
-			</intent-filter
-            -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host=""
-                    android:scheme="file" />
-                <data android:mimeType="application/epub+zip" />
-                <data android:mimeType="application/x-pilot-prc" />
-                <data android:mimeType="application/x-mobipocket-ebook" />
-                <data android:mimeType="application/x-fictionbook+xml" />
-                <data android:mimeType="application/x-fictionbook" />
-                <data android:mimeType="application/pdf" />
-                <data android:mimeType="application/x-pdf" />
-                <data android:mimeType="application/djvu" />
-                <data android:mimeType="application/x-djvu" />
-                <data android:mimeType="application/x-cbr" />
-                <data android:mimeType="application/x-cbz" />
-                <data android:mimeType="image/vnd.djvu" />
-                <data android:mimeType="image/x-djvu" />
-                <data android:mimeType="text/plain" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
-
-            <intent-filter>
-                <action android:name="android.fbreader.action.CLOSE" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.fbreader.action.PLUGIN_CRASH" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-
-        <activity android:name="org.geometerplus.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/FBReader.Activity" />
         <activity
             android:name="org.geometerplus.android.fbreader.image.ImageViewActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
